<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.team6.inventory.activities.AddItemActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_name_field"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:hint="Name (required)"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/edit_value_field"
                    android:layout_below="@+id/edit_name_field"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:hint="Value (default is 0 if left blank)"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_condition_field"
                    android:hint="Condition"
                    android:layout_below="@+id/edit_value_field"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/edit_description_field"
                    android:layout_below="@+id/edit_condition_field"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:hint="Description"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    app:srcCompat="@drawable/ic_no_image"
                    android:id="@+id/edit_image_view"
                    android:layout_below="@+id/edit_description_field"
                    android:layout_centerHorizontal="true"
                    android:scaleType="centerCrop"
                    android:adjustViewBounds="true" />

                <Button
                    android:text="Change Image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_image_button"
                    android:layout_below="@+id/edit_image_view" />

                <Button
                    android:text="SAVE CHANGES"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/edit_image_button"
                    android:id="@+id/save_edits_button" />

            </RelativeLayout>
    </ScrollView>

</RelativeLayout>
