...
                />

            <Button
                android:text="EDIT ITEM DETAILS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/details_edit_button"
                android:layout_below="@+id/details_item_image"/>

            <Button
                android:text="DELETE THIS ITEM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deleteItemButton"
                android:layout_below="@+id/details_edit_button"
                android:onClick="deleteItem"/>

        </RelativeLayout>
    </ScrollView>

...
